log/build_2021-05-31_13-35-47/gazebo_plugin_sim/stderr.log
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:84:7: error: no declaration matches ‘void gazebo_plugin_sim::PlatformPluginTestPrivate::OnMsgVelM1(geometry_msgs::msg::Twist_<std::allocator<void> >::SharedPtr)’
   84 |  void PlatformPluginTestPrivate::OnMsgVelM1(const geometry_msgs::msg::Twist::SharedPtr _msg)
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:84:7: note: no functions named ‘void gazebo_plugin_sim::PlatformPluginTestPrivate::OnMsgVelM1(geometry_msgs::msg::Twist_<std::allocator<void> >::SharedPtr)’
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:23:8: note: ‘class gazebo_plugin_sim::PlatformPluginTestPrivate’ defined here
   23 |  class PlatformPluginTestPrivate
      |        ^~~~~~~~~~~~~~~~~~~~~~~~~
cc1plus: warning: unrecognized command line option ‘-Wno-inconsistent-missing-override’
make[2]: *** [CMakeFiles/platform_plugin_test.dir/build.make:63: CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/platform_plugin_test.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
